--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -38,6 +38,7 @@
    "cell_type": "markdown",
    "id": "fc3b43ab-ebc7-4515-a103-913ec9f1284c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1774,6 +1775,7 @@
    "cell_type": "markdown",
    "id": "89c46bd8-d84a-4885-bf02-3a30c05faa44",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1887,7 +1889,10 @@
   {
    "cell_type": "markdown",
    "id": "e7429022-34b6-4de2-8e34-87b8030ae805",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 620. Not Boring Movies"
    ]
@@ -1983,7 +1988,6 @@
    "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1991,12 +1995,119 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31951f16-3c0d-4273-a11f-a399021234da",
+   "cell_type": "markdown",
+   "id": "3c8fd387-894e-4175-895d-c0e5b1c2abef",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 176. Second Highest Salary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9e52d50-6fc4-469a-a5ef-2ec840460173",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "838bce31-27c9-409e-ba0e-fe16adf74cac",
+   "metadata": {},
+   "source": [
+    "Table: Employee\n",
+    "\n",
+    "    +-------------+------+\n",
+    "    | Column Name | Type |\n",
+    "    +-------------+------+\n",
+    "    | id          | int  |\n",
+    "    | salary      | int  |\n",
+    "    +-------------+------+\n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table contains information about the salary of an employee.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the second highest salary from the Employee table. If there is no second highest salary, return null (return None in Pandas)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2126593-10ad-45b3-9531-a7513cc2e411",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72340153-c7f3-40e7-8810-1f829d29cb6e",
+   "metadata": {},
+   "source": [
+    "NOTE: works only if there is a second highest. otherwise it's supposed to return null but doesn't\n",
+    "\n",
+    "    SELECT salary AS secondHighestSalary FROM Employee\n",
+    "    ORDER BY salary DESC\n",
+    "    LIMIT 1, 1\n",
+    "    \n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7d770e9-5869-4538-bed9-f1abb4410a1b",
+   "metadata": {},
+   "source": [
+    "NOTE: thought there might be some trick i don't know, so looked up the query on google to select second highest salary... solution is super simple\n",
+    "\n",
+    "    SELECT MAX(salary) as secondHighestSalary FROM Employee\n",
+    "    WHERE salary NOT IN (\n",
+    "        SELECT MAX(salary)\n",
+    "        FROM Employee\n",
+    "    )\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27f93bd6-2335-4291-a2f6-8747e222087b",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aee1c6b5-d4d2-4414-a4d1-9cf3a1fe30d3",
+   "metadata": {},
+   "source": [
+    "from some leetcode solution. used the offset like in my initial attempt but added additional logic to satisfy the null condition\n",
+    "\n",
+    "    SELECT\n",
+    "        (SELECT DISTINCT salary \n",
+    "        FROM Employee \n",
+    "        ORDER BY salary DESC \n",
+    "        LIMIT 1 OFFSET 1) AS SecondHighestSalary;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "352c31c9-4f44-47b8-a162-72ab31717076",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60664ad9-ede8-4b04-8a67-625b898d9887",
+   "metadata": {},
+   "source": [
+    "first medium SQL problem. there were no new keywords, functions or tools here, just using a combination of things and getting creative. as seen by the attempts and the solutions, there's multiple ways of getting to the solution. gave up a little too quickly on this one, will need to develop my problem solving in SQL, even if initially my code is ugly or slow. also got intimidated by the fact that the problem only had a 40% acceptance rate, should ignore those numbers and just focus on solving the problem"
+   ]
   },
   {
    "cell_type": "markdown",
