--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -38,7 +38,6 @@
    "cell_type": "markdown",
    "id": "fc3b43ab-ebc7-4515-a103-913ec9f1284c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1982,6 +1981,116 @@
     "in the WHERE clause in my attempt, it is possible to use the modulus operator instead of the function as well. so writing this also works:\n",
     "\n",
     "    WHERE id % 2 = 1 AND description <> 'boring'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1fbc9d0-5ab9-4b05-bd39-b872d22cd3f8",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 627. Swap Salary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e7316ac-a3f5-4bc6-be75-d5614ba3f511",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39a896d6-a035-4555-beea-bb411bf830fa",
+   "metadata": {},
+   "source": [
+    "Table: Salary\n",
+    "\n",
+    "    +-------------+----------+\n",
+    "    | Column Name | Type     |\n",
+    "    +-------------+----------+\n",
+    "    | id          | int      |\n",
+    "    | name        | varchar  |\n",
+    "    | sex         | ENUM     |\n",
+    "    | salary      | int      |\n",
+    "    +-------------+----------+\n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "The sex column is ENUM (category) value of type ('m', 'f').\n",
+    "The table contains information about an employee.\n",
+    " \n",
+    "\n",
+    "Write a solution to swap all 'f' and 'm' values (i.e., change all 'f' values to 'm' and vice versa) with a single update statement and no intermediate temporary tables.\n",
+    "\n",
+    "Note that you must write a single update statement, do not write any select statement for this problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d49508a-d75f-4467-bed7-849e5f98efaf",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44c703b4-9fd0-4fe0-b287-b11278d98b59",
+   "metadata": {},
+   "source": [
+    "NOTE: slow solution\n",
+    "\n",
+    "    UPDATE Salary\n",
+    "    SET sex = CASE WHEN sex = 'm' THEN 'f' ELSE 'm' END;\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d192ecc2-bc13-4543-9936-b501df745c88",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc813de0-9fd0-4f3f-bc02-704a2f775242",
+   "metadata": {},
+   "source": [
+    "some solution from leetcode. similar to mine but appears faster and more 'precise'. all the others were very similar to mine. there is a slight change in the syntax that would be worth looking into\n",
+    "\n",
+    "    Update Salary\n",
+    "    SET sex= CASE sex\n",
+    "    WHEN 'm' THEN 'f'\n",
+    "    WHEN 'f' THEN 'm'\n",
+    "    ELSE sex\n",
+    "    END"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eda65ae7-b974-4ca0-a155-944a3383befc",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1eed5ad-b6a4-4c2c-8c09-6d3555a7b14e",
+   "metadata": {},
+   "source": [
+    "this is the template i used to create my solution, it's possible to update multiple columns at once:\n",
+    "\n",
+    "    UPDATE myTable\n",
+    "    SET \n",
+    "    col1 = CASE WHEN col1 = 1 THEN 5 ELSE 1 END,\n",
+    "    col2 = CASE WHEN col2 = 2 THEN 6 ELSE 2 END,\n",
+    "    col3 = CASE WHEN col3 = 3 THEN 7 ELSE 3 END "
    ]
   },
   {
