--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -38,6 +38,7 @@
    "cell_type": "markdown",
    "id": "fc3b43ab-ebc7-4515-a103-913ec9f1284c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2091,6 +2092,144 @@
     "    col1 = CASE WHEN col1 = 1 THEN 5 ELSE 1 END,\n",
     "    col2 = CASE WHEN col2 = 2 THEN 6 ELSE 2 END,\n",
     "    col3 = CASE WHEN col3 = 3 THEN 7 ELSE 3 END "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3395317-91e4-4071-84fe-644fa869c314",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1050. Actors and Directors Who Cooperated At Least Three Times"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "840dded7-51f2-44a8-bf97-193e4011c2aa",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72d687f1-c24a-4abf-8156-5c540152817f",
+   "metadata": {},
+   "source": [
+    "Table: ActorDirector\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | actor_id    | int     |\n",
+    "    | director_id | int     |\n",
+    "    | timestamp   | int     |\n",
+    "    +-------------+---------+\n",
+    "timestamp is the primary key (column with unique values) for this table.\n",
+    " \n",
+    "\n",
+    "Write a solution to find all the pairs (actor_id, director_id) where the actor has cooperated with the director at least three times.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a64ca82-a826-44ec-8f92-04a27ece04fd",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b2c3fc-644e-42b5-a87f-ce8c7c5ab820",
+   "metadata": {},
+   "source": [
+    "NOTE: this won't work because every time actor_id >=3 the second condition will be met too, logical flaw  \n",
+    "  \n",
+    "    SELECT actor_id, director_id\n",
+    "    FROM ActorDirector\n",
+    "    GROUP BY actor_id\n",
+    "    HAVING COUNT(actor_id) >= 3 AND COUNT(director_id) >= 3\n",
+    "    \n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0393e94-8673-4ffe-82ff-2084b11ca072",
+   "metadata": {},
+   "source": [
+    "    SELECT actor_id, director_id\n",
+    "    FROM ActorDirector\n",
+    "    GROUP BY actor_id, director_id\n",
+    "    HAVING COUNT(actor_id) >= 3 AND COUNT(director_id) >= 3\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8588f64-6db9-42d4-88fe-b236c44c060f",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82c120eb-efb4-4142-81cf-2e84d6696851",
+   "metadata": {},
+   "source": [
+    "a leetcode solution\n",
+    "\n",
+    "    SELECT actor_id, director_id \n",
+    "    FROM (\n",
+    "    SELECT actor_id,director_id, \n",
+    "    COUNT(timestamp) AS cooperated \n",
+    "    FROM ActorDirector \n",
+    "    GROUP BY actor_id,director_id) \n",
+    "    table1\n",
+    "    WHERE cooperated>=3;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fd32cc1-2403-47f4-8ef2-35e6632d20b1",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c44497e-80b9-411a-ac2c-275865fa7c18",
+   "metadata": {},
+   "source": [
+    "there is still something about aggregations i still don't fundamentally understanding:\n",
+    "1. COUNT(), SUM(), etc. before the grouping\n",
+    "2. GROUP BY itself\n",
+    "3. aggregations performed after the grouping - HAVING COUNT(), SUM(), etc.\n",
+    "\n",
+    "explanation of the leetcode solution:\n",
+    "the inner query here is the bulk of the solution. here's a breakdown\n",
+    "1. SELECT actor_id, director_id, COUNT(timestamp) AS cooperated\n",
+    "   * this part selects actor_id and director_id and counts the number of rows for each combination of actor_id and director_id. this count is given the alias 'cooperated'\n",
+    "2. GROUP BY actor_id, director_id\n",
+    "    * this groups the results by actor_id and director_id. for each unique combination of actor_id and director_id, it aggregates (counts) the number of timestamps (cooperations)\n",
+    "3. this is what the output would look like\n",
+    "\n",
+    "        +-------------+-------------+------------+\n",
+    "        | actor_id    | director_id | cooperated |\n",
+    "        +-------------+-------------+------------+\n",
+    "        | 1           | 101         | 3          |\n",
+    "        | 1           | 102         | 2          |\n",
+    "        | 2           | 101         | 3          |\n",
+    "        +-------------+-------------+------------+\n",
+    "4. from there it is easy to see what the outer query does\n"
    ]
   },
   {
