--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -30,8 +30,13 @@
     "\n",
     "### study notes\n",
     "\n",
-    "1. study in more depth aggregations functions (COUNT(), MAX(), AVG(), etc.) and their impact on GROUP BY and ORDER BY clauses\n",
-    "2. might be worth just looking into GROUP BY by itself, to really understand what it does to the data"
+    "getting to a point where i may have practiced enough, and it would now be useful to delve more into concepts/theory so i better understand what am i doing and why it works. might be useful to go over a number of built in functions & other tools in SQL in order to actually be able to solve medium problems\n",
+    "\n",
+    "1. study in more depth aggregations functions (COUNT(), SUM(), MAX(), AVG(), etc.) and their impact on GROUP BY and ORDER BY clauses:\n",
+    "    1. COUNT(), SUM(), etc. before the grouping\n",
+    "    2. GROUP BY itself\n",
+    "    3. aggregations performed after the grouping - HAVING COUNT(), SUM(), etc.\n",
+    "2. study order of operations (which clauses come first, and which statements are performed first and why)"
    ]
   },
   {
@@ -2163,6 +2168,8 @@
    "id": "c0393e94-8673-4ffe-82ff-2084b11ca072",
    "metadata": {},
    "source": [
+    "NOTE: the AND condition here isn't necessary, and simply HAVING COUNT(actor_id) >= 3 would suffice\n",
+    "\n",
     "    SELECT actor_id, director_id\n",
     "    FROM ActorDirector\n",
     "    GROUP BY actor_id, director_id\n",
@@ -2236,6 +2243,7 @@
    "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2355,6 +2363,132 @@
    "metadata": {},
    "source": [
     "first medium SQL problem. there were no new keywords, functions or tools here, just using a combination of things and getting creative. as seen by the attempts and the solutions, there's multiple ways of getting to the solution. gave up a little too quickly on this one, will need to develop my problem solving in SQL, even if initially my code is ugly or slow. also got intimidated by the fact that the problem only had a 40% acceptance rate, should ignore those numbers and just focus on solving the problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cdc39f1-5217-433b-99f8-f3bfaebe4435",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 177. Nth Highest Salary@ <- uses custom SQL functions i haven't seen before; come back to it later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f3a79a4-f195-44a7-b41d-629d15150a28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7ed39e9-62c5-40e7-934a-94c7253fc6d0",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 178. Rank Scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "514653ba-724d-4cca-9e0f-67b6c1319fcb",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ad2e388-e355-4f15-a0a4-f8b03a118fa1",
+   "metadata": {},
+   "source": [
+    "Table: Scores\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | id          | int     |\n",
+    "    | score       | decimal |\n",
+    "    +-------------+---------+\n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table contains the score of a game. Score is a floating point value with two decimal places.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the rank of the scores. The ranking should be calculated according to the following rules:\n",
+    "\n",
+    "* The scores should be ranked from the highest to the lowest.\n",
+    "* If there is a tie between two scores, both should have the same ranking.\n",
+    "* After a tie, the next ranking number should be the next consecutive integer value. In other words, there should be no holes between ranks.\n",
+    "\n",
+    "Return the result table ordered by score in descending order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb63038f-5852-4661-a077-897cd9de8e3b",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e80be41-43b1-4b8e-98e8-cfd545260c3b",
+   "metadata": {},
+   "source": [
+    "NOTE: this fails because the RANK() function here will give the same rank value to tied score, but will increment either way. in other words, if the two top score are 4.0, they will both rank as 1, but if the next following top score is 3.85, it will rank as 3 (as opposed to 2 as specified by the question)\n",
+    "\n",
+    "    SELECT score, RANK() OVER(ORDER BY score DESC) AS 'rank'\n",
+    "    FROM Scores\n",
+    "    \n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5df07975-57a4-480e-9ccf-5a02e9165c36",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a1c225a-207c-4ab3-81c8-b8dfd65bf70e",
+   "metadata": {},
+   "source": [
+    "NOTE: DENSE_RANK() fixes the issue by not allowing gaps between rankings\n",
+    "\n",
+    "    SELECT score, DENSE_RANK() OVER(ORDER BY score DESC) AS 'rank'\n",
+    "    FROM Scores\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f30c2513-8d46-472a-8a2d-eb51a12adfa6",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d00e5cea-edd4-4df4-9b83-5081975e12fe",
+   "metadata": {},
+   "source": [
+    "this question was tricky because without knowledge of the RANK() & DENSE_RANK() functions, it wouldn't have been feasible to solve this\n",
+    "\n",
+    "there is an overview of SQL RANK functions here: https://www.sqlshack.com/overview-of-sql-rank-functions/\n",
+    "\n",
+    "it would be useful to understand better the OVER() function (how does it know what to go over without a partition?) as well as how to effectively use PARTITION for more complex problems"
    ]
   },
   {
