--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -43,7 +43,6 @@
    "cell_type": "markdown",
    "id": "fc3b43ab-ebc7-4515-a103-913ec9f1284c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2241,6 +2240,125 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5a9c8cc-34ea-43a0-9636-31fa167656d6",
+   "metadata": {},
+   "source": [
+    "### 1068. Product Sales Analysis I"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be888d89-60f6-4aa1-a086-dd0b3513e5e8",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5d9e279-e569-4a7c-9901-5014ce801b31",
+   "metadata": {},
+   "source": [
+    "Table: Sales\n",
+    "\n",
+    "    +-------------+-------+\n",
+    "    | Column Name | Type  |\n",
+    "    +-------------+-------+\n",
+    "    | sale_id     | int   |\n",
+    "    | product_id  | int   |\n",
+    "    | year        | int   |\n",
+    "    | quantity    | int   |\n",
+    "    | price       | int   |\n",
+    "    +-------------+-------+\n",
+    "(sale_id, year) is the primary key (combination of columns with unique values) of this table.\n",
+    "product_id is a foreign key (reference column) to Product table.\n",
+    "Each row of this table shows a sale on the product product_id in a certain year.\n",
+    "Note that the price is per unit.\n",
+    " \n",
+    "\n",
+    "Table: Product\n",
+    "\n",
+    "    +--------------+---------+\n",
+    "    | Column Name  | Type    |\n",
+    "    +--------------+---------+\n",
+    "    | product_id   | int     |\n",
+    "    | product_name | varchar |\n",
+    "    +--------------+---------+\n",
+    "product_id is the primary key (column with unique values) of this table.\n",
+    "Each row of this table indicates the product name of each product.\n",
+    " \n",
+    "\n",
+    "Write a solution to report the product_name, year, and price for each sale_id in the Sales table.\n",
+    "\n",
+    "Return the resulting table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b91dc5a5-0aee-4f26-9516-e9c22947a86a",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbabd094-4adf-4c67-9dfd-6491468e61eb",
+   "metadata": {},
+   "source": [
+    "    SELECT p.product_name, s.year, s.price FROM Sales s\n",
+    "    JOIN Product p ON s.product_id = p.product_id\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56f6382f-3f70-432e-87ae-378f5a5ff401",
+   "metadata": {},
+   "source": [
+    "NOTE: also works since both tables have the same column for product_id\n",
+    "\n",
+    "    SELECT product_name, year, price FROM Sales \n",
+    "    JOIN Product USING(product_id)\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "954c149b-44bf-4d44-9fb1-6576eb706d78",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94df5566-539d-4476-b1c3-f32a40514c62",
+   "metadata": {},
+   "source": [
+    "very simple problem, solutions are all the same"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "933e8490-c063-4d52-be08-dbb80d17edb9",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ca2099e-fff8-4930-b170-51473e0c975b",
+   "metadata": {},
+   "source": [
+    "nothing to add"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -2377,9 +2495,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45477ff6-50f6-42cd-999e-c6ef903420b2",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c49d89d-464b-4a86-bda5-36924b41e280",
+   "metadata": {},
+   "source": [
+    "Table: Employee\n",
+    "\n",
+    "    +-------------+------+\n",
+    "    | Column Name | Type |\n",
+    "    +-------------+------+\n",
+    "    | id          | int  |\n",
+    "    | salary      | int  |\n",
+    "    +-------------+------+\n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table contains information about the salary of an employee.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the nth highest salary from the Employee table. If there is no nth highest salary, return null."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "897b5a3b-213c-4d06-afb8-9d1660214880",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d03a3902-2b8f-48df-adde-1dd14c41fcde",
+   "metadata": {},
+   "source": [
+    "    -CREATE FUNCTION getNthHighestSalary(N INT) RETURNS INT\n",
+    "    -BEGIN\n",
+    "    -  RETURN (\n",
+    "    -      # Write your MySQL query statement below.\n",
+    "    -\n",
+    "    -  );\n",
+    "    -END"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe0b6de3-5a13-409c-a811-115b7c11033a",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f3a79a4-f195-44a7-b41d-629d15150a28",
+   "id": "aeca8a99-2a24-47cd-83ae-5803e5acb64c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0729f2ae-c84b-457a-8eb3-0dc6047a63eb",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b31f5acf-151d-4cf3-889f-c21ae39ec6cb",
    "metadata": {},
    "outputs": [],
    "source": []
