--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -2241,7 +2241,10 @@
   {
    "cell_type": "markdown",
    "id": "c5a9c8cc-34ea-43a0-9636-31fa167656d6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 1068. Product Sales Analysis I"
    ]
@@ -2352,6 +2355,114 @@
   {
    "cell_type": "markdown",
    "id": "8ca2099e-fff8-4930-b170-51473e0c975b",
+   "metadata": {},
+   "source": [
+    "nothing to add"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0bc1341-5853-4e36-a6dd-56d50107732b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1075. Project Employees I"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5512dc8d-d76d-4eed-94a4-43e8e4f1ec88",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76e9050d-1a52-434d-89d1-d4c23c07daa3",
+   "metadata": {},
+   "source": [
+    "Table: Project\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | project_id  | int     |\n",
+    "    | employee_id | int     |\n",
+    "    +-------------+---------+\n",
+    "(project_id, employee_id) is the primary key of this table.\n",
+    "employee_id is a foreign key to Employee table.\n",
+    "Each row of this table indicates that the employee with employee_id is working on the project with project_id.\n",
+    " \n",
+    "\n",
+    "Table: Employee\n",
+    "\n",
+    "    +------------------+---------+\n",
+    "    | Column Name      | Type    |\n",
+    "    +------------------+---------+\n",
+    "    | employee_id      | int     |\n",
+    "    | name             | varchar |\n",
+    "    | experience_years | int     |\n",
+    "    +------------------+---------+\n",
+    "employee_id is the primary key of this table. It's guaranteed that experience_years is not NULL.\n",
+    "Each row of this table contains information about one employee.\n",
+    " \n",
+    "\n",
+    "Write an SQL query that reports the average experience years of all the employees for each project, rounded to 2 digits.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b84f76a-d008-4ab4-b589-806f7943a208",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0dc6674-e043-483c-b90d-65251ec0d781",
+   "metadata": {},
+   "source": [
+    "    SELECT project_id, ROUND(AVG(experience_years), 2) AS average_years\n",
+    "    FROM Project\n",
+    "    JOIN Employee USING(employee_id)\n",
+    "    GROUP BY project_id\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "712bb384-b2ee-4440-b9a3-13b1a0b29577",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc05203e-1ed8-4344-bcb3-7b3ded4add24",
+   "metadata": {},
+   "source": [
+    "another simple problem, solutions are all a variation of the same thing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "825a57b4-91fc-43dd-9246-8df5aeb236c8",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea5a6fe9-a6d1-4e6a-b9ed-3cb3c2a9a3ea",
    "metadata": {},
    "source": [
     "nothing to add"
