--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -43,6 +43,7 @@
    "cell_type": "markdown",
    "id": "fc3b43ab-ebc7-4515-a103-913ec9f1284c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2792,6 +2793,199 @@
     "there is an overview of SQL RANK functions here: https://www.sqlshack.com/overview-of-sql-rank-functions/\n",
     "\n",
     "it would be useful to understand better the OVER() function (how does it know what to go over without a partition?) as well as how to effectively use PARTITION for more complex problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8f0f8d2-c759-4e0f-aa10-b0b167d11123",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 180. Consecutive Numbers@ <- explanation for various solutions incomplete"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "519ec501-3e43-496e-b20a-cbe83823166a",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d57d8678-2dfa-47c0-a028-066de7abcb3b",
+   "metadata": {},
+   "source": [
+    "Table: Logs\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | id          | int     |\n",
+    "    | num         | varchar |\n",
+    "    +-------------+---------+\n",
+    "In SQL, id is the primary key for this table.\n",
+    "id is an autoincrement column.\n",
+    " \n",
+    "\n",
+    "Find all numbers that appear at least three times consecutively.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dead883-2a79-4cec-bc9d-bef7481c1539",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2b526e9-b65d-4272-8da2-de90ab27a1f6",
+   "metadata": {},
+   "source": [
+    "NOTE: honestly not entirely sure how my query works or why exactly it is failing...\n",
+    "\n",
+    "    SELECT DISTINCT num AS ConsecutiveNums FROM (\n",
+    "        SELECT *, ROW_NUMBER() OVER(PARTITION BY num ORDER BY id) AS counter\n",
+    "        FROM Logs\n",
+    "    ) AS sub\n",
+    "    WHERE counter >= 3\n",
+    "    \n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65804e3e-41ab-4590-b962-27b0f26d2bab",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>\n",
+    "there's tons of solutions, here's a few"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44cb8d4f-7ce3-481e-90a4-1722b66e7949",
+   "metadata": {},
+   "source": [
+    "Approach 1 - using joins (very slow...)\n",
+    "\n",
+    "    SELECT DISTINCT l1.num AS ConsecutiveNums\n",
+    "    FROM Logs l1\n",
+    "    JOIN Logs l2 ON l1.id = l2.id - 1\n",
+    "    JOIN Logs l3 ON l1.id = l3.id - 2\n",
+    "    WHERE l1.num = l2.num AND l2.num = l3.num;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eced3a9a-4c64-448a-903e-42bcd91e23b1",
+   "metadata": {},
+   "source": [
+    "Approach 2 - using LEAD and LAG (pretty decent)\n",
+    "\n",
+    "    SELECT DISTINCT num AS ConsecutiveNums\n",
+    "    FROM (\n",
+    "        SELECT \n",
+    "            LAG(id) OVER (ORDER BY id) AS prev_id,\n",
+    "            id,\n",
+    "            LEAD(id) OVER (ORDER BY id) AS next_id,\n",
+    "            LAG(num) OVER (ORDER BY id) AS prev_num,\n",
+    "            num,\n",
+    "            LEAD(num) OVER (ORDER BY id) AS next_num\n",
+    "        FROM logs\n",
+    "    ) subquery\n",
+    "    WHERE prev_num = num \n",
+    "      AND num = next_num\n",
+    "      AND next_id - id = 1 \n",
+    "      AND id - prev_id = 1;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8fa2cc3-4fb2-4559-bfc7-647d16abdd66",
+   "metadata": {},
+   "source": [
+    "Approach 3 - using EXISTS and SUBQUERY (also decent)\n",
+    "\n",
+    "    SELECT DISTINCT l1.num AS ConsecutiveNums\n",
+    "    FROM Logs l1\n",
+    "    WHERE EXISTS (\n",
+    "        SELECT 1\n",
+    "        FROM Logs l2\n",
+    "        WHERE l2.id = l1.id + 1 AND l2.num = l1.num\n",
+    "        AND EXISTS (\n",
+    "            SELECT 1\n",
+    "            FROM Logs l3\n",
+    "            WHERE l3.id = l1.id + 2 AND l3.num = l1.num\n",
+    "        )\n",
+    "    );"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28b31ab2-41dc-4f0f-a57f-79b5f72bcff0",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c4a6d57-8fd0-41f6-9df2-3acd82c6be6c",
+   "metadata": {},
+   "source": [
+    "this was the output of my subquery in my attempt:\n",
+    "\n",
+    "    | id | num | counter |\n",
+    "    | -- | --- | ------- |\n",
+    "    | 1  | 1   | 1       |\n",
+    "    | 2  | 1   | 2       |\n",
+    "    | 3  | 1   | 3       |\n",
+    "    | 5  | 1   | 4       |\n",
+    "    | 4  | 2   | 1       |\n",
+    "    | 6  | 2   | 2       |\n",
+    "    | 7  | 2   | 3       |\n",
+    "    \n",
+    "don't really understand how the ORDER BY here works considering it's not ordered by id. \n",
+    "\n",
+    "partitioning by id gave the following result, which makes even less sense to me:\n",
+    "\n",
+    "    | id | num | counter |\n",
+    "    | -- | --- | ------- |\n",
+    "    | 1  | 1   | 1       |\n",
+    "    | 2  | 1   | 1       |\n",
+    "    | 3  | 1   | 1       |\n",
+    "    | 4  | 2   | 1       |\n",
+    "    | 5  | 1   | 1       |\n",
+    "    | 6  | 2   | 1       |\n",
+    "    | 7  | 2   | 1       |\n",
+    "    \n",
+    "something i'm really not understanding about ROW_NUMBER()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d9e972d-2f83-4d32-87a4-8369e1121107",
+   "metadata": {},
+   "source": [
+    "explanation for the solutions. there is tons to unpack here...\n",
+    "\n",
+    "* Approach 1.\n",
+    "\n",
+    "    [...]\n",
+    "* Approach 2.\n",
+    "\n",
+    "    [...]\n",
+    "* Approach 3.\n",
+    "\n",
+    "    [...[]"
    ]
   },
   {
