--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -36,7 +36,8 @@
     "    1. COUNT(), SUM(), etc. before the grouping\n",
     "    2. GROUP BY itself\n",
     "    3. aggregations performed after the grouping - HAVING COUNT(), SUM(), etc.\n",
-    "2. study order of operations (which clauses come first, and which statements are performed first and why)"
+    "2. study order of operations (which clauses come first, and which statements are performed first and why)\n",
+    "3. difference between a derived table and subquery? "
    ]
   },
   {
@@ -2467,6 +2468,177 @@
    "metadata": {},
    "source": [
     "nothing to add"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ee220b2-a244-444c-992e-a625f80e7fe2",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1084. Sales Analysis III"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37782d7b-abb3-4244-9840-6578c773a870",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db7b0175-7ef7-43b6-8308-99d7ee086550",
+   "metadata": {},
+   "source": [
+    "Table: Product\n",
+    "\n",
+    "    +--------------+---------+\n",
+    "    | Column Name  | Type    |\n",
+    "    +--------------+---------+\n",
+    "    | product_id   | int     |\n",
+    "    | product_name | varchar |\n",
+    "    | unit_price   | int     |\n",
+    "    +--------------+---------+\n",
+    "product_id is the primary key (column with unique values) of this table.\n",
+    "Each row of this table indicates the name and the price of each product.\n",
+    "Table: Sales\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | seller_id   | int     |\n",
+    "    | product_id  | int     |\n",
+    "    | buyer_id    | int     |\n",
+    "    | sale_date   | date    |\n",
+    "    | quantity    | int     |\n",
+    "    | price       | int     |\n",
+    "    +-------------+---------+\n",
+    "This table can have duplicate rows.\n",
+    "product_id is a foreign key (reference column) to the Product table.\n",
+    "Each row of this table contains some information about one sale.\n",
+    " \n",
+    "\n",
+    "Write a solution to report the products that were only sold in the first quarter of 2019. That is, between 2019-01-01 and 2019-03-31 inclusive.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f95aa4d-9ec0-4c5d-af26-84d3cca8ea98",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0186ce6f-4c72-4a2b-9562-a1f255022e39",
+   "metadata": {},
+   "source": [
+    "NOTE: this will not exclude products that are sold outside of this range as well. they need to be sold ONLY within this range\n",
+    "\n",
+    "    SELECT product_id, product_name FROM Product\n",
+    "    JOIN Sales USING(product_id)\n",
+    "    WHERE sale_date BETWEEN '2019-01-01' AND '2019-03-31'\n",
+    "\n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1573fa12-d793-4a9a-a900-88f1718063a4",
+   "metadata": {},
+   "source": [
+    "NOTE: if a product_id exists in the Product table but not the Sales table, the output will not be correct\n",
+    "\n",
+    "    SELECT product_id, product_name FROM Product\n",
+    "    WHERE product_id NOT IN\n",
+    "    (\n",
+    "        SELECT product_id FROM Product\n",
+    "        JOIN Sales USING(product_id)\n",
+    "        WHERE sale_date NOT BETWEEN '2019-01-01' AND '2019-03-31'\n",
+    "    ) \n",
+    "    \n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4100810-2a07-45ba-9a77-2288b65479bc",
+   "metadata": {},
+   "source": [
+    "NOTE: using LEFT JOIN as opposed to RIGHT JOIN made the difference between success and failure. still having bit of a hard time to visualize left vs right join (although \n",
+    "straightforward...). i believe the 'left' table is the first one mentioned (right after the FROM clause) and the right on is the one being joined. makes sense for this example\n",
+    "\n",
+    "NOTE: also for whatever reason, putting the NOT BETWEEN statement in parantheses caused a syntax error -> s.sale_date (NOT BETWEEN '2019-01-01' AND '2019-03-31' <- doesn't work\n",
+    "\n",
+    "    SELECT product_id, product_name FROM Product\n",
+    "    WHERE product_id NOT IN\n",
+    "    (\n",
+    "        SELECT p.product_id FROM Product p\n",
+    "        LEFT JOIN Sales s ON s.product_id = p.product_id\n",
+    "        WHERE s.sale_date IS NULL \n",
+    "        OR s.sale_date NOT BETWEEN '2019-01-01' AND '2019-03-31'\n",
+    "    ) \n",
+    "    \n",
+    "this also works\n",
+    "\n",
+    "    SELECT product_id, product_name FROM Product\n",
+    "    WHERE product_id NOT IN\n",
+    "    (\n",
+    "        SELECT product_id FROM Product \n",
+    "        LEFT JOIN Sales USING(product_id)\n",
+    "        WHERE sale_date IS NULL \n",
+    "        OR sale_date NOT BETWEEN '2019-01-01' AND '2019-03-31'\n",
+    "    ) \n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52dde419-8dc8-4d8e-85c2-9eb14b1dcc76",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24f5c54e-af59-4486-b0a9-46edabaee75f",
+   "metadata": {},
+   "source": [
+    "from some leetcode solution. this solution uses a GROUP BY and HAVING conditions to exclude those products that are sold both inside and outside the range, and doesn't need to deal with the null values\n",
+    "\n",
+    "    SELECT s.product_id, product_name\n",
+    "    FROM Sales s\n",
+    "    LEFT JOIN Product p ON s.product_id = p.product_id\n",
+    "    GROUP BY s.product_id\n",
+    "    HAVING MIN(sale_date) >= '2019-01-01' AND MAX(sale_date) <= '2019-03-31'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bda830da-b309-4531-bea7-6fc8a0b326c7",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "687e8f10-986b-47ef-8bfb-3c2c111696c2",
+   "metadata": {},
+   "source": [
+    "the BETWEEN operator:\n",
+    "* The BETWEEN operator selects values within a given range. The values can be numbers, text, or dates.\n",
+    "* The BETWEEN operator is inclusive: begin and end values are included. \n",
+    "* NOT can be included before to give the opposite result"
    ]
   },
   {
